# youtube-dashboard

./: .replit  app.py  data_visualizer.py  pyproject.toml  replit.md  requirements.txt  url_parser.py  youtube_analyzer.py
attached_assets/: Pasted--1-URL--1751479007642_1751479007643.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-layout-Legend-labels--1751480071960_1751480071961.txt
